--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     <div class="countdown"></div>
                     <div class="pleaseWait-text">Please wait..</div>
                     <div class="manualDownload-text">
-                      If the download didn't start automatically, <a href="" class="manualDownload-link">click here.</a>
+                      If the download didn't start automatically, <a href="./CV/Hikmatullah CV.doc" class="manualDownload-link">click here.</a>
                     </div>
                   </div>
               
