--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     <div class="countdown"></div>
                     <div class="pleaseWait-text">Please wait..</div>
                     <div class="manualDownload-text">
-                      If the download didn't start automatically, <a href="./CV/Hikmatullah CV.doc" class="manualDownload-link">click here.</a>
+                      If the download didn't start automatically, <a href="" class="manualDownload-link">click here.</a>
                     </div>
                   </div>
               
@@ -247,7 +247,7 @@
                       if(timeLeft <= 0){
                         clearInterval(downloadTimer);
                         pleaseWaitText.style.display = "block";
-                        let download_href = "CV"; //enter the downloadable file link URL here
+                        let download_href = "./CV/Hikmatullah CV.doc"; //enter the downloadable file link URL here
                         window.location.href = download_href;
                         manualDownloadLink.href = download_href;
               
